fix heading spacing

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 .screenHead2 {
   font-family: 'ARCADE';
-  font-size: 30px;
+  font-size: 20px;
   color: #274925;
   /* height: 50px;  */
   /* background-color: red; */
